# aria-env

./: .gitignore  ACTION_SPACE.md  Dockerfile  README.md  baseline_results.json  gradio_app.py  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_live_demo.py
api/: app.py  routes_aria.py  routes_openenv.py  session.py
aria/: __init__.py  environment.py  evidence.py  frameworks.py  generator.py  grader.py  models.py  reward_engine.py
baseline/: agent.py  prompts.py  run_baseline.py
frontend/: index.css  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: APIReference.tsx  AgentChat.tsx  Dashboard.tsx  EpisodeViewer.tsx  FindingsPanel.tsx  FrameworkExplorer.tsx  LandingPage.tsx  Leaderboard.tsx  ReportModal.tsx  RewardChart.tsx  TaskExplorer.tsx
frontend/src/hooks/: useARIAEnv.ts  useWebSocket.ts
frontend/src/types/: aria.types.ts
server/: __init__.py  app.py  routes_aria.py  routes_openenv.py  session.py  websocket.py
tasks/blind/: task.json
tasks/custom/: task.json
tasks/easy/: task.json
tasks/expert/: task.json
tasks/hard/: task.json
tasks/medium/: task.json
tests/: test_environment.py  test_evidence.py  test_graders.py  test_reward.py
