[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aria-env"
version = "1.0.0"
description = "ARIA — Agentic Regulatory Intelligence Architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=1.51.0",
]

[tool.setuptools.packages.find]
include = ["aria*", "api*", "baseline*"]