[project]
name = "aria-v1-final"
version = "1.0.0"
description = "ARIA: Agentic Regulatory Intelligence Architecture for multi-framework compliance."
authors = [{name = "Muskan"}]
requires-python = ">=3.11, <3.13" 
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=2.7.2",
    "python-multipart>=0.0.12",
    "websockets>=15.0.1",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
    "python-dotenv",
    "requests",
    "openenv-core>=0.2.0"
]

# --- ADD THIS SECTION ---
[tool.hatch.build.targets.wheel]
packages = ["aria", "server"]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"